--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="box bg-white shadow">
               <div class="icon icon-svg mb-20"><img src="style/images/icons/ui-house.png" alt=""></div>
               <h5>Next Living</h5>
-              <p>The way we live in and use our homes is changing all the time. What will be the Next Innovation that will change the way we live forever?</p>
+              <p>The way how we live in and around our homes is changing.</p>
               <a href="impact-areas.html#next-living" class="btn btn-s btn-blue">Read More</a>
             </div>
             <!--/.box -->
@@ -126,8 +126,7 @@
             <div class="box bg-white shadow">
               <div class="icon icon-svg mb-20"><img src="style/images/icons/ec-shopping-basket.png" alt=""></div>
               <h5>Next Retail</h5>
-              <p>The retail industry is experiencing major changes in order to keep up with consumer demands
-                and expectations. What will the retail experience of the future look like?</p>
+              <p> The retail industry is changing rapidly in order to keep up with consumer demands.</p>
               <a href="impact-areas.html#next-retail" class="btn btn-s btn-blue">Read More</a>
             </div>
             <!--/.box -->
@@ -138,7 +137,7 @@
             <div class="box bg-white shadow">
               <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
               <h5>Next Technology</h5>
-              <p>Technology has the ability to enhance the way we live ourlives or solve the problems we are facing. How will technology shape the future?</p>
+              <p>Technology has become crucial for tackling the challenges we are facing.</p>
               <a href="impact-areas.html#next-technology" class="btn btn-s btn-blue">Read More</a>
             </div>
             <!--/.box -->
@@ -148,11 +147,10 @@
           <div class="col-md-6 col-lg-3">
             <div class="box bg-white shadow">
               <div class="icon icon-svg mb-20"><img src="style/images/icons/de-invention.png" alt=""></div>
-              <h5>Next ?
+              <h5>Next Manufacturing
               </h5>
-              <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo
-                odio. Cum sociis natoque penatibus magnis dis.</p>
-              <a href="impact-areas.html#next-energy" class="btn btn-s btn-blue">Read More</a>
+              <p>The way how we produce our goods and products is changing towards more sustainability and transparency</p>
+              <a href="impact-areas.html#next-manufacturing" class="btn btn-s btn-blue">Read More</a>
             </div>
             <!--/.box -->
           </div>
