--- a/index.html
+++ b/index.html
@@ -525,13 +525,13 @@
           <div class="col-md-8 offset-md-2">
             <div class="row counter">
               <div class="col-md-6 color-default">
-                <h3 class="color-default"><span class="value">12+</span></h3>
+                <h3 class="color-default"><span class="value">12</span>+</h3>
                 <p>Top Coaches</p>
               </div>
               <!--/column -->
               <div class="col-md-6 color-default">
-                <h3 class="color-default">€<span class="value">405</span>K</h3>
-                <p>Invested in startups</p>
+                <h3 class="color-default">€<span class="value">350</span>+</h3>
+                <p>Impact Investments</p>
               </div>
               <!--/column -->
 
