--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="box bg-white shadow">
               <div class="icon icon-svg mb-20"><img src="style/images/icons/ui-house.png" alt=""></div>
               <h5>Next Living</h5>
-              <p>The way how we live in and around our homes is changing.</p>
+              <p>The way how we live in and around our homes is changing.</p></br>
               <a href="impact-areas.html#next-living" class="btn btn-s btn-blue">Read More</a>
             </div>
             <!--/.box -->
@@ -126,7 +126,7 @@
             <div class="box bg-white shadow">
               <div class="icon icon-svg mb-20"><img src="style/images/icons/ec-shopping-basket.png" alt=""></div>
               <h5>Next Retail</h5>
-              <p> The retail industry is changing rapidly in order to keep up with consumer demands.</p>
+              <p>The retail industry is changing rapidly in order to keep up with consumer demands.</p>
               <a href="impact-areas.html#next-retail" class="btn btn-s btn-blue">Read More</a>
             </div>
             <!--/.box -->
@@ -137,7 +137,7 @@
             <div class="box bg-white shadow">
               <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
               <h5>Next Technology</h5>
-              <p>Technology has become crucial for tackling the challenges we are facing.</p>
+              <p>Technology has become crucial for tackling the challenges we are facing.</p></br>
               <a href="impact-areas.html#next-technology" class="btn btn-s btn-blue">Read More</a>
             </div>
             <!--/.box -->
@@ -149,7 +149,7 @@
               <div class="icon icon-svg mb-20"><img src="style/images/icons/de-invention.png" alt=""></div>
               <h5>Next Manufacturing
               </h5>
-              <p>The way how we produce our goods and products is changing towards more sustainability and transparency</p>
+              <p>Production of goods and products is becoming more sustainable and transparent.</p>
               <a href="impact-areas.html#next-manufacturing" class="btn btn-s btn-blue">Read More</a>
             </div>
             <!--/.box -->
