about and startups contact btn

--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
             <p>Our community consist of startups within our four impact areas,
               exclusive private investors with the ambition to accelerate transitions and top coaches with different
               experience but all with a positive drive to have a impact on next living, next retail, next technogy and
-              next xxx.</p>
+              next manufacturing.</p>
 
             <div class="panel-footer"><a href="#" class="btn btn-s btn-blue" data-toggle="modal"
                 data-target="#modal-03">Contact us</a></div>
