--- a/community/capss-infusion.html
+++ b/community/capss-infusion.html
@@ -123,6 +123,9 @@
                         2023: 1.750.000 euro
                         </p>
                     </li>
+                    <li>
+                      <a href="mailto:info@nextcycle.nl" class="btn btn-s btn-blue">Contact</a>
+                    </li>
                   </ul>
                 </div>
                 <!--/column -->
