--- a/community/ez360.html
+++ b/community/ez360.html
@@ -108,6 +108,9 @@
                       <h5 class="mb-5">Annual Revenue</h5>
                       <p>€100.000-200.000</p>
                     </li>
+                    <li>
+                      <a href="mailto:info@nextcycle.nl" class="btn btn-s btn-blue">Contact</a>
+                    </li>
                   </ul>
                 </div>
                 <!--/column -->
