--- a/community/fibibuffer.html
+++ b/community/fibibuffer.html
@@ -115,6 +115,9 @@ You help prevent 'single use' in the business chain.</p>
                       <h5 class="mb-5">Annual Revenue</h5>
                       <p>Almost break-even</p>
                     </li>
+                    <li>
+                      <a href="mailto:info@nextcycle.nl" class="btn btn-s btn-blue">Contact</a>
+                    </li>
                   </ul>
                 </div>
                 <!--/column -->
