next manufac in menu

--- a/about.html
+++ b/about.html
@@ -57,7 +57,10 @@
                 </li>
                 <li class="dropdown"><a class="dropdown-item dropdown-toggle"
                     href="impact-areas.html#next-technology">Next Technology</a>
-
+                </li>
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle"
+                    href="impact-areas.html#next-manufacturing">Next Manufacturing</a>
+                </li>
               </ul>
             </li>
             <li class="nav-item"><a class="nav-link" href="community.html">Community</a>
@@ -83,23 +86,26 @@
       <div class="container inner">
         <div class="row align-items-center">
           <div class="col-lg-6">
-            <div class="img-blob blob8 mb-30"><img src="style\images\nextcycle\maurice-van-den-oever.jpg" style="width: 25rem"
-                alt="Maurice van den Oever" /></div>
-                <blockquote class="icon">
-                  <p>"Startups are crucial, more than ever, to transform different industries. And private investors give these startups the fuel that they need to accelerate."</p>
-                  <footer class="blockquote-footer">Maurice van den Oever</footer>
-                </blockquote>
-                <ul class="social social-s ml-auto text-center">
-                  <li><a href="https://www.linkedin.com/in/maurice-van-den-oever-235b6a50/" target="_blank"><i class="jam jam-linkedin"></i></a>
-                  </li>
-                </ul>
+            <div class="img-blob blob8 mb-30"><img src="style\images\nextcycle\maurice-van-den-oever.jpg"
+                style="width: 25rem" alt="Maurice van den Oever" /></div>
+            <blockquote class="icon">
+              <p>"Startups are crucial, more than ever, to transform different industries. And private investors give
+                these startups the fuel that they need to accelerate."</p>
+              <footer class="blockquote-footer">Maurice van den Oever</footer>
+            </blockquote>
+            <ul class="social social-s ml-auto text-center">
+              <li><a href="https://www.linkedin.com/in/maurice-van-den-oever-235b6a50/" target="_blank"><i
+                    class="jam jam-linkedin"></i></a>
+              </li>
+            </ul>
           </div>
           <!--/column -->
           <div class="space20 d-md-none"></div>
           <div class="space50 d-none d-md-block d-lg-none"></div>
           <div class="col-lg-6 pl-60 pl-md-15">
             <h2 class="title-color color-gray">About NextCycle</h2>
-            <h3 class="display-3">We connect startups with experts to accelerate the next innovation cycle & attract private investors to realize the next innovation cycle.
+            <h3 class="display-3">We connect startups with experts to accelerate the next innovation cycle & attract
+              private investors to realize the next innovation cycle.
             </h3>
             <p>Our community consist of startups within our four impact areas,
               exclusive private investors with the ambition to accelerate transitions and top coaches with different
@@ -256,7 +262,7 @@
             </h4>
             <div class="meta mb-5">Trend watcher and C-level advisor
             </div>
-            <p>‘Be aware of the trends around you’ 
+            <p>‘Be aware of the trends around you’
             </p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/ravishmehairjan/" target="_blank"><i
@@ -339,7 +345,7 @@
             </h4>
             <div class="meta mb-5">Ceo, Value Connect
             </div>
-            <p>'Energized by building relationships’ 
+            <p>'Energized by building relationships’
             </p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/ravishmehairjan/" target="_blank"><i
