--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
   
                   </li>
                   <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-technology">Next Technology</a>
+                  </li>
+                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-manufacturing">Next Manufacturing</a>
+                    </li>
   
                 </ul>
             </li>
