--- a/index.html
+++ b/index.html
@@ -686,12 +686,12 @@
                   <div class="box p-50 d-flex">
                     <div class="align-self-center">
                       <h2 class="section-title mb-30">Get in Touch</h2>
-                      <form id="contact-form" method="post" action="contact/contact.php">
+                      <form id="contact-form" name="contact" method="post" data-netlify="true">
                         <div class="messages"></div>
                         <div class="controls">
                           <div class="form-row">
                             <div class="col-md-6">
-                              <div class="form-group">
+                              <div class="form-group" >
                                 <input id="form_name" type="text" name="name" class="form-control"
                                   placeholder="First Name *" required="required" data-error="First Name is required.">
                                 <div class="help-block with-errors"></div>
