--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
                   <div class="box p-50 d-flex">
                     <div class="align-self-center">
                       <h2 class="section-title mb-30">Get in Touch</h2>
-                      <form id="contact-form" name="contact" method="post" data-netlify="true">
+                      <form id="contact-form" name="contact" method="post" data-netlify="true" action="/index.html">
                         <div class="messages"></div>
                         <div class="controls">
                           <div class="form-row">
