--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
                   <div class="box p-50 d-flex">
                     <div class="align-self-center">
                       <h2 class="section-title mb-30">Get in Touch</h2>
-                      <form id="contact-form" name="contact" method="post" data-netlify="true" action="/index.html">
+                      <form id="contact-form" name="contact" method="post" data-netlify="true" action="/message-sent.html">
                         <div class="messages"></div>
                         <div class="controls">
                           <div class="form-row">
@@ -729,7 +729,7 @@
                               </div>
                             </div>
                             <div class="col-md-12">
-                              <input type="submit" class="btn btn-send" value="Send message">
+                              <input type="submit" class="btn btn-send" value="Send message" data-toggle="modal" data-target="#modal-03">
                             </div>
                           </div>
                           <div class="form-row">
