test form submission success message

--- a/index.html
+++ b/index.html
@@ -729,8 +729,11 @@
                               </div>
                             </div>
                             <div class="col-md-12">
-                              <input type="submit" class="btn btn-send" value="Send message" data-toggle="modal" data-target="#modal-03">
+                              <input type="submit" class="btn btn-send" value="Send message">
                             </div>
+                            <p id="thank-you-message">
+                              Thank you for contacting us. We will be in touch with you very soon.
+                            </p>
                           </div>
                           <div class="form-row">
                             <div class="col-md-12">
