contact form clear after sent and message box success

--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                             <div class="col-md-12">
                               <input type="submit" class="btn btn-send" value="Send message">
                             </div>
-                            <p id="thank-you-message">
+                            <p class="alert alert-success" id="thank-you-message">
                               Thank you for contacting us. We will be in touch with you very soon.
                             </p>
                           </div>
