--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                     content.
                   </p>
                   <ul class="social social-s ml-auto mb-10">
-                    <li><a href="ez360.html"><i class="icofont-link"></i></a></li>
+                    <li><a href="/community/ez360.html"><i class="icofont-link"></i></a></li>
                   </ul>
                 </div>
                 <!--/.box -->
@@ -581,7 +581,7 @@
                     opportunities in beverage applications.
                   </p>
                   <ul class="social social-s ml-auto mb-10">
-                    <li><a href="capss-infusion.html"><i class="icofont-link"></i></a></li>
+                    <li><a href="/community/capss-infusion.html"><i class="icofont-link"></i></a></li>
                   </ul>
                 </div>
                 <!--/.box -->
@@ -601,7 +601,7 @@
                     environmentally friendly way!
                   </p>
                   <ul class="social social-s ml-auto mb-10">
-                    <li><a href="fibibuffer.html"><i class="icofont-link"></i></a></li>
+                    <li><a href="/community/fibibuffer.html"><i class="icofont-link"></i></a></li>
                   </ul>
                 </div>
                 <!--/.box -->
