--- a/community.html
+++ b/community.html
@@ -192,99 +192,103 @@
   </div>
   <!-- /.wrapper -->
 
-  <!--THE CONTACT FORM-->
-  <div class="modal fade" id="modal-03" tabindex="-1" role="dialog" aria-labelledby="modal-03" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-      <div class="modal-content">
-        <div class="container-fluid boxed p-0">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-          <div class="image-block-wrapper">
-            <div class="image-block col-lg-6">
-              <div class="image-block-bg bg-image" data-image-src="style/images/art/bg23.jpg"></div>
-            </div>
-            <!--/.image-block -->
-            <div>
-              <div class="row no-gutters">
-                <div class="col-lg-6 offset-lg-6">
-                  <div class="box p-50 d-flex">
-                    <div class="align-self-center">
-                      <h2 class="section-title mb-30">Join the Next Cycle</h2>
-                      <form id="contact-form" method="post" action="contact/contact.php">
-                        <div class="messages"></div>
-                        <div class="controls">
-                          <div class="form-row">
-                            <div class="col-md-6">
-                              <div class="form-group">
-                                <input id="form_name" type="text" name="name" class="form-control"
-                                  placeholder="First Name *" required="required" data-error="First Name is required.">
-                                <div class="help-block with-errors"></div>
-                              </div>
-                            </div>
-                            <div class="col-md-6">
-                              <div class="form-group">
-                                <input id="form_lastname" type="text" name="surname" class="form-control"
-                                  placeholder="Last Name *" required="required" data-error="Last Name is required.">
-                                <div class="help-block with-errors"></div>
-                              </div>
+ <!--THE CONTACT FORM-->
+ <div class="modal fade" id="modal-03" tabindex="-1" role="dialog" aria-labelledby="modal-03" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="container-fluid boxed p-0">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <div class="image-block-wrapper">
+          <div class="image-block col-lg-6">
+            <div class="image-block-bg bg-image" data-image-src="style/images/art/bg23.jpg"></div>
+          </div>
+          <!--/.image-block -->
+          <div>
+            <div class="row no-gutters">
+              <div class="col-lg-6 offset-lg-6">
+                <div class="box p-50 d-flex">
+                  <div class="align-self-center">
+                    <h2 class="section-title mb-30">Get in Touch</h2>
+                    <form id="contact-form" name="contact-community-page" method="post" data-netlify="true" action="/message-sent.html">
+                      <div class="messages"></div>
+                      <div class="controls">
+                        <div class="form-row">
+                          <div class="col-md-6">
+                            <div class="form-group" >
+                              <input id="form_name" type="text" name="name" class="form-control"
+                                placeholder="First Name *" required="required" data-error="First Name is required.">
+                              <div class="help-block with-errors"></div>
                             </div>
                           </div>
-                          <div class="form-row">
-                            <div class="col-md-6">
-                              <div class="form-group">
-                                <input id="form_email" type="email" name="email" class="form-control"
-                                  placeholder="Email *" required="required" data-error="Valid email is required.">
-                                <div class="help-block with-errors"></div>
-                              </div>
-                            </div>
-                            <div class="col-md-6">
-                              <div class="form-group">
-                                <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Phone">
-                                <div class="help-block with-errors"></div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="form-row">
-                            <div class="col-md-12">
-                              <div class="form-group">
-                                <textarea id="form_message" name="message" class="form-control" placeholder="Message *"
-                                  rows="4" required="required" data-error="Message is required."></textarea>
-                                <div class="help-block with-errors"></div>
-                              </div>
-                            </div>
-                            <div class="col-md-12">
-                              <input type="submit" class="btn btn-send" value="Send message">
-                            </div>
-                          </div>
-                          <div class="form-row">
-                            <div class="col-md-12">
-                              <p class="text-muted"><strong>*</strong> These fields are required.</p>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <input id="form_lastname" type="text" name="surname" class="form-control"
+                                placeholder="Last Name *" required="required" data-error="Last Name is required.">
+                              <div class="help-block with-errors"></div>
                             </div>
                           </div>
                         </div>
-                      </form>
-                      <!-- /form -->
-                    </div>
-                    <!-- /div -->
+                        <div class="form-row">
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <input id="form_email" type="email" name="email" class="form-control"
+                                placeholder="Email *" required="required" data-error="Valid email is required.">
+                              <div class="help-block with-errors"></div>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Phone">
+                              <div class="help-block with-errors"></div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-row">
+                          <div class="col-md-12">
+                            <div class="form-group">
+                              <textarea id="form_message" name="message" class="form-control" placeholder="Message *"
+                                rows="4" required="required" data-error="Message is required."></textarea>
+                              <div class="help-block with-errors"></div>
+                            </div>
+                          </div>
+                          <div class="col-md-12">
+                            <input type="submit" class="btn btn-send" value="Send message">
+                          </div>
+                          <p class="alert alert-success" id="thank-you-message">
+                            Thank you for contacting us. We will be in touch with you very soon.
+                          </p>
+                        </div>
+                        <div class="form-row">
+                          <div class="col-md-12">
+                            <p class="text-muted"><strong>*</strong> These fields are required.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </form>
+                    <!-- /form -->
                   </div>
-                  <!-- /.box -->
+                  <!-- /div -->
                 </div>
-                <!--/column -->
+                <!-- /.box -->
               </div>
-              <!--/.row -->
+              <!--/column -->
             </div>
-            <!--/div -->
+            <!--/.row -->
           </div>
-          <!--/.image-block-wrapper -->
+          <!--/div -->
         </div>
-        <!--/.boxed -->
+        <!--/.image-block-wrapper -->
       </div>
-      <!--/.modal-content -->
+      <!--/.boxed -->
     </div>
-    <!--/.modal-dialog -->
+    <!--/.modal-content -->
   </div>
-  <!--/.modal -->
+  <!--/.modal-dialog -->
+</div>
+<!--/.modal -->
+
 
   <footer class="dark-wrapper inverse-text text-center">
     <div class="container inner pt-80 pb-80">
