--- a/community/capss-infusion.html
+++ b/community/capss-infusion.html
@@ -328,7 +328,7 @@
                   <div class="box p-50 d-flex">
                     <div class="align-self-center">
                       <h2 class="section-title mb-30">Get in Touch</h2>
-                      <form id="contact-form" name="contact" method="post" data-netlify="true" action="/message-sent.html">
+                      <form id="contact-form" name="contact-capss-infusion" method="post" data-netlify="true" action="/message-sent.html">
                         <div class="messages"></div>
                         <div class="controls">
                           <div class="form-row">
@@ -405,6 +405,7 @@
     <!--/.modal-dialog -->
   </div>
   <!--/.modal -->
+
 
 
 
