--- a/community/ez360.html
+++ b/community/ez360.html
@@ -304,7 +304,7 @@
                   <div class="box p-50 d-flex">
                     <div class="align-self-center">
                       <h2 class="section-title mb-30">Get in Touch</h2>
-                      <form id="contact-form" name="contact" method="post" data-netlify="true" action="/message-sent.html">
+                      <form id="contact-form" name="contact-ez360" method="post" data-netlify="true" action="/message-sent.html">
                         <div class="messages"></div>
                         <div class="controls">
                           <div class="form-row">
