--- a/about.html
+++ b/about.html
@@ -340,7 +340,7 @@
           <div class="col-md-3">
             <figure class="img-blob blob8 mb-25"><img src="style/images/nextcycle/coaches/ravish-mehairjan.jpg"
                 style="width: 10rem" alt="" /></figure>
-            <h4 class="mb-15">Dr. Ing. Ravish Mehairjan
+            <h4 class="mb-15">Ravish Mehairjan
 
             </h4>
             <div class="meta mb-5">Ceo, Value Connect
