--- a/impact-areas.html
+++ b/impact-areas.html
@@ -200,12 +200,12 @@
             <div class="icon icon-svg mb-20"><img src="style/images/icons/ui-house.png" alt=""></div>
 
             <h2 class="title-color color-gray">Next Living</h2>
-            <h3 class="display-3">Leveraging Technology to strive towards environment-friendly, integrated, automated
-              and personalised travel on demand.</h3>
+            <h3 class="display-3">The way how we live in and around our homes is changing.</h3>
             <div class="space20"></div>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio,
-              dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl
-              consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio.</p>
+            <p>A home is one the most important basic needs. A need that is shared among 7.6 billion people, and counting. In order to
+              make sure our homes are ready for the future and realize decent housing for all, we need to rethink how and where we live. Will you
+              be part of the Next Living Cycle?
+            </p>
             <div class="space20"></div>
             <div><a href="#" class="btn btn-m btn-green" data-toggle="modal" data-target="#modal-03">Apply now</a></div>
             <!--/.row -->
@@ -243,12 +243,13 @@
             <div class="icon icon-svg mb-20"><img src="style/images/icons/ec-shopping-basket.png" alt=""></div>
 
             <h2 class="title-color color-gray">Next Retail</h2>
-            <h3 class="display-3">Leveraging Technology to strive towards environment-friendly, integrated, automated
-              and personalised travel on demand.</h3>
+            <h3 class="display-3">The retail industry is changing rapidly in order to keep up with consumer demands.</h3>
             <div class="space20"></div>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio,
-              dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl
-              consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio.</p>
+            <p>Consumers don't like to be disappointed. When products are out of stock, customers aren't happy. But on the other hand,
+              consumers also increasingly demand for sustainability in retail and disaprove unethical practices. It is up to the 
+              retail industry to organize it as such that all boxes are ticked. Will you
+              be part of the Next Retail Cycle?
+            </p>
             <div class="space20"></div>
             <div><a href="#" class="btn btn-m btn-rose" data-toggle="modal" data-target="#modal-03">Apply now</a></div>
             <!--/.row -->
@@ -270,8 +271,7 @@
           <div class="col-lg-6 pl-60 pl-md-15">
             <div class="icon icon-svg mb-20"><img src="style/images/icons/de-invention.png" alt=""></div>
             <h2 class="title-color color-gray">Next Technology</h2>
-            <h3 class="display-3">Leveraging Technology to strive towards environment-friendly, integrated, automated
-              and personalised travel on demand.</h3>
+            <h3 class="display-3">Technology has become crucial for tackling the challenges we are facing.</h3>
             <div class="space20"></div>
             <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio,
               dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl
@@ -284,7 +284,7 @@
           <!--/column -->
           <div class="space30 d-none d-md-block d-lg-none"></div>
           <div class="col-lg-6 play-wrapper light-gallery-wrapper text-center">
-            <div class="img-blob blob10"><img src="style/images/nextcycle/energy.jpg" style="width: 20rem" alt="" />
+            <div class="img-blob blob10"><img src="style/images/nextcycle/tech.jpg" style="width: 20rem" alt="" />
             </div>
           </div>
           <!--/column -->
@@ -304,7 +304,7 @@
       <div class="container inner">
         <div class="row align-items-center">
           <div class="col-lg-6 play-wrapper light-gallery-wrapper text-center">
-            <div class="img-blob blob8"><img src="style/images/nextcycle/food.jpg" style="width: 20rem" alt="" /></div>
+            <div class="img-blob blob8"><img src="style/images/nextcycle/construction.jpg" style="width: 20rem" alt="" /></div>
           </div>
           <!--/column -->
           <div class="space30 d-none d-md-block d-lg-none"></div>
@@ -312,14 +312,13 @@
             <div class="icon icon-svg mb-20"><img src="style/images/icons/de-wrenches.png" alt=""></div>
 
             <h2 class="title-color color-gray">Next Manufacturing</h2>
-            <h3 class="display-3">Leveraging Technology to strive towards environment-friendly, integrated, automated
-              and personalised travel on demand.</h3>
+            <h3 class="display-3">Production of goods and products is becoming more sustainable and transparent.</h3>
             <div class="space20"></div>
             <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio,
               dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl
               consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio.</p>
             <div class="space20"></div>
-            <div><a href="#" class="btn btn-m btn-rose" data-toggle="modal" data-target="#modal-03">Apply now</a></div>
+            <div><a href="#" class="btn btn-m btn-blue" data-toggle="modal" data-target="#modal-03">Apply now</a></div>
             <!--/.row -->
           </div>
           <!--/column -->
