--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <div class="icon icon-svg mb-20"><img src="style/images/icons/ui-house.png" alt=""></div>
               <h5>Next Living</h5>
               <p>The way how we live in and around our homes is changing.</p></br>
-              <a href="impact-areas.html#next-living" class="btn btn-s btn-blue">Read More</a>
+              <a href="impact-areas.html#next-living" class="btn btn-s btn-default">Read More</a>
             </div>
             <!--/.box -->
           </div>
@@ -130,7 +130,7 @@
               <div class="icon icon-svg mb-20"><img src="style/images/icons/ec-shopping-basket.png" alt=""></div>
               <h5>Next Retail</h5>
               <p>The retail industry is changing rapidly in order to keep up with consumer demands.</p>
-              <a href="impact-areas.html#next-retail" class="btn btn-s btn-blue">Read More</a>
+              <a href="impact-areas.html#next-retail" class="btn btn-s btn-default">Read More</a>
             </div>
             <!--/.box -->
           </div>
@@ -141,7 +141,7 @@
               <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
               <h5>Next Technology</h5>
               <p>Technology has become crucial for tackling the challenges we are facing.</p></br>
-              <a href="impact-areas.html#next-technology" class="btn btn-s btn-blue">Read More</a>
+              <a href="impact-areas.html#next-technology" class="btn btn-s btn-default">Read More</a>
             </div>
             <!--/.box -->
           </div>
@@ -153,7 +153,7 @@
               <h5>Next Manufacturing
               </h5>
               <p>Production of goods and products is becoming more sustainable and transparent.</p>
-              <a href="impact-areas.html#next-manufacturing" class="btn btn-s btn-blue">Read More</a>
+              <a href="impact-areas.html#next-manufacturing" class="btn btn-s btn-default">Read More</a>
             </div>
             <!--/.box -->
           </div>
