--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
           <div class="col-md-2"> <span class="icon icon-blob icon-blob-purple color-purple mb-30"><i
                 class="icofont-chart-histogram"></i><span class="step bg-purple">5</span></span>
             <h5>Monitoring</h5>
-            <p>Monitoring progress + investors/startup meetings.</p>
+            <p>Monitoring progress & investors/startup meetings.</p>
           </div>
           <!--/column -->
         </div>
