--- a/community.html
+++ b/community.html
@@ -102,6 +102,7 @@
               <li><a class="button" data-filter=".living">living</a></li>
               <li><a class="button" data-filter=".retail">retail</a></li>
               <li><a class="button" data-filter=".technology">technology</a></li>
+              <li><a class="button" data-filter=".manufacturing">manufacturing</a></li>
             </ul>
           </div>
           <div class="clearfix"></div>
