--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="content-overlay">
           <div class="container text-center">
             <h2 class="section-title">Hello! We're NextCycle </h2>
-            <p class="lead larger">We connect start-ups with experts to accelerate the next innovation cycle &
+            <p class="lead larger">We connect startups with experts to accelerate the next innovation cycle &
               attract private investors to realize te next investment cycle.</p>
           </div>
           <!-- /.container -->
@@ -243,7 +243,7 @@
           <div class="col-md-2 offset-md-1"> <span class="icon icon-blob icon-blob-blue color-blue mb-30"><i
                 class="icofont-rocket-alt-2"></i><span class="step bg-blue">1</span></span>
             <h5>Kick-off</h5>
-            <p>What are the USP's of the start-up.</p>
+            <p>What are the USP's of the startup.</p>
           </div>
           <!--/column -->
           <div class="col-md-2"> <span class="icon icon-blob icon-blob-orange color-orange mb-30"><i
