--- a/impact-areas.html
+++ b/impact-areas.html
@@ -205,9 +205,9 @@
             <h2 class="title-color color-gray">Next Living</h2>
             <h3 class="display-3">The way how we live in and around our homes is changing.</h3>
             <div class="space20"></div>
-            <p>A home is one the most important basic needs. A need that is shared among 7.6 billion people, and counting. In order to make sure we anticipate
+            <p>A home is one of the most important basic needs. A need that is shared among 7.6 billion people, and counting. In order to make sure we anticipate
                to the changing needs in and around our homes and realize decent housing for all, we need to rethink how and where we live. Will you
-              be part of the Next Living Cycle?
+              be part of this Next Cycle?
             </p>
             
             <div class="space20"></div>
@@ -250,7 +250,7 @@
             <h3 class="display-3">The retail industry is changing rapidly in order to keep up with consumer demands.</h3>
             <div class="space20"></div>
             <p>Consumers don't like to be disappointed. When products are out of stock, customers aren't happy. But on the other hand,
-              consumers also increasingly demand for sustainability in retail and disaprove unethical practices. It is up to the 
+              consumers also increasingly demand for sustainability in retail and disaprove unethical practices. it's up to the 
               retail industry to organize it as such that all boxes are ticked. Will you
               be part of the Next Retail Cycle?
             </p>
@@ -352,7 +352,7 @@
 
               we face the challenge of resources becoming more scarse, avaialbe resources, for example
               impact on construction sector, but also lack of "space" for production of food. 
-              but also to really see how it is produced, transparency becoming more important.
+              but also to really see how it's produced, transparency becoming more important.
 
 
 
