--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="container text-center">
             <h2 class="section-title">Hello! We're NextCycle </h2>
             <p class="lead larger">We connect startups with experts to accelerate the next innovation cycle &
-              attract private investors to realize te next investment cycle.</p>
+              attract private investors to realize the next investment cycle.</p>
           </div>
           <!-- /.container -->
         </div>
@@ -103,7 +103,7 @@
           <div class="col-lg-8 offset-lg-2">
             <h2 class="section-title larger text-center">Our Impact Areas</h2>
             <div class="space30"></div>
-            <h1 class="display-4 text-center">Our focus lies on mature startups, active within one of these four impact areas.</h1>
+            <h1 class="display-4 text-center">Our focus lies on mature startups, active within one of these four impact areas:</h1>
             <div class="space30"></div>
           </div>
           <!-- /column -->
@@ -185,9 +185,9 @@
                 <div class="align-self-center">
                   <h3>The Innovation Cycle</h3>
                   <div class="space10"></div>
-                  <p>Innovation is not a race to the finishline. It is an iterative process which requires constant attention. Innovation is never a 
+                  <p>Innovation is not a race to the finishline. it's an iterative process which requires constant attention. Innovation is never a 
                     straight line, but always requires you to jump into the next phase. This asks for accurate planning, monitoring progress, 
-                    taking action and adding value. In the end, it's not about ideas, it is about making ideas happen. Are you ready for the Next Innovation Cycle?
+                    taking action and adding value. In the end, it's not about ideas, it's about making ideas happen. Are you ready for the Next Innovation Cycle?
 </p>
                 </div>
                 <!-- /.box -->
@@ -215,8 +215,8 @@
                   <div class="align-self-center">
                     <h3>The Investment Cycle</h3>
                     <div class="space10"></div>
-                    <p>Getting funded is crucial for a startup, it is the fuel for taking the next steps. On the other side, the startup
-                      also takes onboard a new co-pilot, therefore it is crucial to have a good fit between the startup and investor.
+                    <p>Getting funded is crucial for a startup, it's the fuel for taking the next steps. On the other side, the startup
+                      also takes onboard a new co-pilot, therefore it's crucial to have a good fit between the startup and investor.
                       However, it can be challenging for a startup, but also investor, to find the right match. Make connections, have a good match
                       and get funded. Are you ready for the Next Investment Cycle?
                     </p>
@@ -442,7 +442,7 @@
                 <div id="accordion-collapse-1-1" class="collapse show" aria-labelledby="accordion-heading-1-1"
                   data-parent="#accordion-1">
                   <div class="card-body">
-                    <p>Do you have a startup and are you looking for the Next Investment Cycle? Apply to the NextCycle
+                    <p>Do you have a startup and are you looking for the Next Investment Cycle? Join the NextCycle
                       community and allow us to accelerate your startup, connect you with a network of professional
                       coaches and attract private investors.</p>
                   </div>
