--- a/about.html
+++ b/about.html
@@ -303,7 +303,7 @@
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/laurens-van-roomen-43564656" target="_blank"><i
                     class="jam jam-linkedin"></i></a></li>
-              <li><a href="http://www.laurensvanroomen.nl" target="_blank"><i class="icofont-link"></i></a></li>
+              <!-- <li><a href="http://www.laurensvanroomen.nl" target="_blank"><i class="icofont-link"></i></a></li> -->
             </ul>
           </div>
           <!--/column -->
