--- a/impact-areas.html
+++ b/impact-areas.html
@@ -252,7 +252,7 @@
             <p>Consumers don't like to be disappointed. When products are out of stock, customers aren't happy. But on the other hand,
               consumers also increasingly demand for sustainability in retail and disaprove unethical practices. it's up to the 
               retail industry to organize it as such that all boxes are ticked. Will you
-              be part of the Next Retail Cycle?
+              be part of this Next Cycle?
             </p>
 <!-- 
             customers hebben meer te zeggen, kunnen op verschillende platforms iets kopen, veel keuze.
@@ -291,7 +291,8 @@
             <div class="space20"></div>
             <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio,
               dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl
-              consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio.</p>
+              consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio.
+              Will you be part of this Next Cycle?</p>
 
               <!-- technologie zit verweven in alle industrien (erkennen).
 
@@ -347,7 +348,8 @@
             <div class="space20"></div>
             <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio,
               dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl
-              consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio.</p>
+              consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio.
+              Will you be part of this Next Cycle?</p>
 <!-- 
 
               we face the challenge of resources becoming more scarse, avaialbe resources, for example
