--- a/index.html
+++ b/index.html
@@ -768,7 +768,10 @@
 
 
 
-
+  <div class="divider"><svg xmlns="http://www.w3.org/2000/svg" class="fill-footer-dark-wrapper"
+    preserveAspectRatio="none" viewBox="0 0 1070 39.07">
+    <path d="M1070,39.07H0V21a6818.1,6818.1,0,0,1,1070,0Z"></path>
+  </svg></div>
 
 
   <div class="wrapper footer-dark-wrapper">
@@ -789,6 +792,8 @@
     <!--/.container -->
   </div>
   <!--/.wrapper -->
+
+
 
 
   <footer class="dark-wrapper inverse-text text-center">
