--- a/community/ez360.html
+++ b/community/ez360.html
@@ -382,6 +382,10 @@
   </div>
   <!--/.modal -->
 
+  <div class="divider"><svg xmlns="http://www.w3.org/2000/svg" class="fill-footer-dark-wrapper"
+    preserveAspectRatio="none" viewBox="0 0 1070 39.07">
+    <path d="M1070,39.07H0V21a6818.1,6818.1,0,0,1,1070,0Z"></path>
+  </svg></div>
 
 
   <!-- /.wrapper -->
