--- a/impact-areas.html
+++ b/impact-areas.html
@@ -500,6 +500,11 @@
   </div>
   <!--/.modal -->
 
+  <div class="divider"><svg xmlns="http://www.w3.org/2000/svg" class="fill-footer-dark-wrapper"
+    preserveAspectRatio="none" viewBox="0 0 1070 39.07">
+    <path d="M1070,39.07H0V21a6818.1,6818.1,0,0,1,1070,0Z"></path>
+  </svg></div>
+
 
     <footer class="dark-wrapper inverse-text text-center">
       <div class="container inner pt-80 pb-80">
