--- a/community/capss-infusion.html
+++ b/community/capss-infusion.html
@@ -434,8 +434,8 @@
 
       <!-- /.widget -->
     </div>
-    <p style="padding-bottom: 0px; margin-bottom: 0px; text-align: right; font-size: small;"><a
-        href="http://www.laurensvanroomen.nl" class="nocolor">Website by Laurens van Roomen</a></p>
+    <p style="padding-bottom: 10px; margin-bottom: 0px; text-align: center; font-size: small;"><a
+        href="http://www.laurensvanroomen.nl" class="meta">Site By Laurens van Roomen</a></p>
     <!-- /.container -->
   </footer>
   </div>
