--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
       <!-- /.widget -->
     </div>
     <p style="padding-bottom: 10px; margin-bottom: 0px; text-align: center; font-size: small;"><a
-        href="http://www.laurensvanroomen.nl" class="meta">By Laurens van Roomen</a></p>
+        href="http://www.laurensvanroomen.nl" class="meta">Site By Laurens van Roomen</a></p>
     <!-- /.container -->
   </footer>
   </div>
