--- a/about.html
+++ b/about.html
@@ -14,7 +14,15 @@
   <link rel="stylesheet" type="text/css" href="style/type/type.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="style/css/color/purple.css">
-</head>
+  <!-- global site tag (gtag.js) - google analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=g-1xkckjbd55"></script>
+<script>
+  window.datalayer = window.datalayer || [];
+  function gtag(){datalayer.push(arguments);}
+  gtag('js', new date());
+
+  gtag('config', 'g-1xkckjbd55');
+</script></head>
 
 <body>
   <div class="content-wrapper">
