--- a/community/fibibuffer.html
+++ b/community/fibibuffer.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+   <!-- global site tag (gtag.js) - google analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=g-1xkckjbd55"></script>
+<script>
+  window.datalayer = window.datalayer || [];
+  function gtag(){datalayer.push(arguments);}
+  gtag('js', new date());
+
+  gtag('config', 'g-1xkckjbd55');
+</script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../style/images/favicon.png">
@@ -15,15 +24,7 @@
   <link rel="stylesheet" type="text/css" href="../style.css">
   <link rel="stylesheet" type="text/css" href="../style/css/color/sky.css">
   <link rel="stylesheet" type="text/css" href="../style/css/font/font4.css">
-  <!-- global site tag (gtag.js) - google analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=g-1xkckjbd55"></script>
-<script>
-  window.datalayer = window.datalayer || [];
-  function gtag(){datalayer.push(arguments);}
-  gtag('js', new date());
-
-  gtag('config', 'g-1xkckjbd55');
-</script></head>
+</head>
 
 <body>
   <div class="content-wrapper">
