--- a/community/fibibuffer.html
+++ b/community/fibibuffer.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-   <!-- global site tag (gtag.js) - google analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=g-1xkckjbd55"></script>
+<!-- global site tag (gtag.js) - google analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=ua-187747465-1"></script>
 <script>
   window.datalayer = window.datalayer || [];
   function gtag(){datalayer.push(arguments);}
   gtag('js', new date());
 
-  gtag('config', 'g-1xkckjbd55');
+  gtag('config', 'ua-187747465-1');
 </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
