--- a/impact-areas.html
+++ b/impact-areas.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-<!-- global site tag (gtag.js) - google analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=ua-187747465-1"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-187747465-1"></script>
 <script>
-  window.datalayer = window.datalayer || [];
-  function gtag(){datalayer.push(arguments);}
-  gtag('js', new date());
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  gtag('config', 'ua-187747465-1');
+  gtag('config', 'UA-187747465-1');
 </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
